# Whisper-Auto-Subtitle-Generator-Eng2kor

./: .gitignore  README.md  docker-compose.yaml  localization.py  main.py  model.py  parse.py  pyproject.toml  run.sh  utils.py
model_back/: Dockerfile  pyproject.toml
model_back/app/: main.py
nginx/: nginx.conf
parse_back/: Dockerfile  docker-compose.yaml  main.py  model.py  parse.py  pyproject.toml  utils.py
parse_back/app/: main.py  model.py  parse.py  time_utils.py  utils.py  validators.py
parse_back/test/: Translate_Effiency_random_shuffle.ipynb  localization_test.ipynb  model_test.ipynb  youtube_test.ipynb
test/: model_test.ipynb  parse_test.ipynb
web_app/: Dockerfile  build.sh  pom.xml
web_app/src/main/java/be/gyu/whisperAutoSubtitleGenerator/: MainController.java  MainService.java  ServletInitializer.java
web_app/src/main/resources/: application.properties
web_app/src/main/webapp/WEB-INF/views/: download.jsp  index.jsp
web_app/whisperAutoSubtitleGenerator/whisperAutoSubtitleGenerator/: build.sh  pom.xml
web_app/whisperAutoSubtitleGenerator/whisperAutoSubtitleGenerator/src/main/java/be/gyu/whisperAutoSubtitleGenerator/: MainController.java  MainService.java  WhisperAutoSubtitleGeneratorApplication.java
web_app/whisperAutoSubtitleGenerator/whisperAutoSubtitleGenerator/src/main/resources/: application.properties
web_app/whisperAutoSubtitleGenerator/whisperAutoSubtitleGenerator/src/main/webapp/WEB-INF/views/: download.jsp  index.jsp
web_app/whisperAutoSubtitleGenerator/whisperAutoSubtitleGenerator/src/test/java/be/gyu/whisperAutoSubtitleGenerator/: WhisperAutoSubtitleGeneratorApplicationTests.java
